complete markup darkmode app

--- a/day3/index.html
+++ b/day3/index.html
@@ -3,11 +3,41 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/1935d064dd.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="style.css" />
     <title>My Project</title>
   </head>
   <body>
-    <h1>Project Starter</h1>
+    <section class="main">
+      <div class="container intro">
+        <div class="intro-text"></div>
+        <h1>저희 앱을 소개합니다</h1>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit iusto
+          magnam, eaque quas dolor illum, eius voluptate quo magni pariatur,
+          voluptas est eum praesentium neque amet architecto explicabo totam
+          maxime.
+        </p>
+        <div class="button">
+          <a href="#" class="btn btn-primary">더 알아보기</a>
+          <a href="#" class="btn btn-orange">회원가입</a>
+        </div>
+      </div>
+      <div class="intro-img">
+        <img src="./images/phone.svg" alt="phone" />
+      </div>
+    </section>
+    <footer>
+      <p>Copyright &copy; 2022.</p>
+    </footer>
+    <span class="toggle-darkmode">
+      <span class="toggle-text">Dark</span>
+      <i class="fas fa-adjust"></i>
+    </span>
+
     <script src="script.js"></script>
   </body>
 </html>
