--- a/day4_darkmode_clock/index.html
+++ b/day4_darkmode_clock/index.html
@@ -15,10 +15,9 @@
         <div class="needle second"></div>
         <div class="center-point"></div>
       </div>
-      <div class="time">12:00</div>
+      <div class="time"></div>
       <div class="date">
-        Monday, Nov
-        <span class="circle">2</span>
+        <span class="circle"></span>
       </div>
     </div>
     <script src="script.js"></script>
