--- a/day6_todolist1/index.html
+++ b/day6_todolist1/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/1935d064dd.js"
+      crossorigin="anonymous"
+    ></script>
     <title>My Project</title>
   </head>
   <body>
-    <h1>할일 목록</h1>
-    <form id="form">
+    <!-- <h1>할일 목록</h1> -->
+    <form id="form" class="form">
       <input
         type="text"
         class="input"
@@ -26,6 +30,10 @@
       >완료한 할 일은 왼쪽 마우스를 클릭하세요. <br />
       삭제하려면 오른쪽 마우스를 클릭하세요.
     </small>
+    <span class="toggle-darkmode">
+      <span class="toggle-text">Dark</span>
+      <i class="fas fa-adjust"></i>
+    </span>
     <script src="script.js"></script>
   </body>
 </html>
