day9 rotating nav

--- a/day9_rotating nav/index.html
+++ b/day9_rotating nav/index.html
@@ -3,11 +3,65 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+    />
     <link rel="stylesheet" href="style.css" />
-    <title>My Project</title>
+    <title>우리 강아지</title>
   </head>
   <body>
-    <h1>Project Starter</h1>
+    <div class="container">
+      <div class="circle-container">
+        <div class="circle">
+          <button id="close">
+            <i class="fas fa-times"></i>
+          </button>
+          <button id="open">
+            <i class="fas fa-bars"></i>
+          </button>
+        </div>
+      </div>
+      <div class="content">
+        <h1>오늘의 최신 기사</h1>
+        <small>반려견을 자랑해보세요!</small>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis natus,
+          nemo distinctio fugit odio nam dignissimos iure soluta nihil ab! Ipsa
+          nam tempore fuga aliquam dolorem porro ratione doloremque eligendi
+          dignissimos voluptatum quidem quasi hic, provident optio architecto
+          enim alias illo libero veritatis recusandae! Reiciendis nostrum
+          expedita quod, corrupti quia fugiat dolorem sed iusto eveniet
+          obcaecati itaque velit labore eaque et? Alias non expedita unde
+          doloribus ipsam, saepe iste iusto quo illo harum veniam reprehenderit
+          ratione distinctio dolores amet suscipit eum pariatur voluptatem
+          commodi architecto error, tenetur nobis ipsa corporis! Voluptates
+          exercitationem illo ea dicta debitis repellat voluptas corrupti
+          aliquam!
+        </p>
+        <h3>우리집 강아지</h3>
+        <img
+          src="https://cdn.imweb.me/upload/S201910012ff964777e0e3/62f9a36ea3cea.jpg"
+          alt="doggy"
+        />
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo voluptate
+        nobis iusto voluptatem sit nemo optio eius ex repellendus fuga, ipsam
+        tenetur reprehenderit ducimus obcaecati natus at libero suscipit id,
+        eaque iste animi praesentium. Dolore nulla, officiis sit vitae
+        reiciendis incidunt, blanditiis ea est optio libero cumque suscipit.
+        Placeat numquam dignissimos quis, libero corrupti excepturi aspernatur?
+        Assumenda, excepturi facilis eos laboriosam dolor, reprehenderit sit
+        soluta, quae nobis voluptatibus debitis beatae natus dignissimos sint
+        fuga ducimus.
+      </div>
+    </div>
+    <nav>
+      <ul>
+        <li><i class="fas fa-home"></i>Home</li>
+        <li><i class="fas fa-user-alt"></i>About</li>
+        <li><i class="fas fa-envelope"></i>Contact</li>
+      </ul>
+    </nav>
     <script src="script.js"></script>
   </body>
 </html>
