day9 adding search bar

--- a/day9_rotating nav/index.html
+++ b/day9_rotating nav/index.html
@@ -12,6 +12,13 @@
   </head>
   <body>
     <div class="container">
+      <div class="search">
+        <input type="text" class="input" placeholder="검색..." />
+        <button class="btn">
+          <i class="fas fa-search"></i>
+        </button>
+      </div>
+
       <div class="circle-container">
         <div class="circle">
           <button id="close">
