--- a/day12_randomcount/index.html
+++ b/day12_randomcount/index.html
@@ -11,7 +11,18 @@
     <title>My Project</title>
   </head>
   <body>
-    <h1>Project Starter</h1>
+    <div class="container">
+      <div class="counter-div">
+        <h1>랜덤 숫자 카운팅 앱</h1>
+        <span class="count number">0</span>
+        <hr />
+        <div class="buttons">
+          <button class="reset generate">
+            <i class="fas fa-spinner reset">실행</i>
+          </button>
+        </div>
+      </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
